2006-11-14  Richard Levitte  <richard@levitte.org>

	NOTE: I bumped the Debian version number to 0.31-90.1 in this
	change so needed upgrades of the monotone-server package would
	get through easily.  I'm regarding that as a very early pre-
	release of 0.32.  Debian maintainers should still release 0.31
	the normal way (updating to the monotone-0.31 tag) and insert
	their entry in debian/changelog directly above the 0.31-0.1 entry.
	* debian/NEWS: Added to provide information on important changes
	to Debian users.
	* debian/changelog: Added an entry for 0.31-90.1
	* debian/monotone-server.postinst: Changed to provide automatic
	upgrade using 'mtn db regenerate_caches" if the previous monotone
	version is less than 0.31-90.1.

2006-11-13  Thomas Moschny  <thomas.moschny@gmx.de>

	* cmd_diff_log.cc (CMD(log)): Fix-ups from last propagate nvm ->
	nvm.heights.
	* revision.cc (CMD(rev_height)): dito.

2006-11-11  Thomas Moschny  <thomas.moschny@gmx.de>

	* rev_height.hh, rev_height.cc: remove the dump method, add an
	overload to the dump function to make heights work with MM().
	* database.cc (put_height_for_revision): Add some MM() calls.
	
2006-11-11  Nathaniel Smith  <njs@pobox.com>

	* notes/: New directory for developer docs.
	* notes/release-checklist.txt: Neaten up my release checklist and
	commit it.
	* tests/README, tester.txt, testsuite.txt: Move to notes/.
	* HACKING: Add a mention of notes/.

2006-11-11  Nathaniel Smith  <njs@pobox.com>

	* NEWS: Set release date.

2006-11-10  Nathaniel Smith  <njs@pobox.com>

	* debian/control (Build-Depends): Remove
	libboost-program-options-dev.

2006-11-10  Nathaniel Smith  <njs@pobox.com>

	* UPGRADE, configure.ac, monotone.spec, debian/changelog:
	* win32/monotone.iss, visualc/config.h: Bump version numbers to
	0.31.

2006-11-10  Nathaniel Smith  <njs@pobox.com>

	* INSTALL: Remove libboost-program-options-dev from the list of
	debian packages.

	* NEWS: First draft of 0.31 release notes.
	