@@ -687,3 +687,4 @@ table.insert(tests, "netsync_epoch_refinement")
 table.insert(tests, "db_check_(heights)")
 table.insert(tests, "disapproving_with_message")
 table.insert(tests, "add_ignored")
+table.insert(tests, "netsync_hook_errcodes")
